--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Vuetify Freelancer Theme Free</title>
+    <title>Harvey's website</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
-    <meta name="description" content="The Freelancer Theme is a free template made with Vuetify">
-    <meta name="keywords" content="free vuetify theme">
   </head>
   <body>
     <noscript>
